[workspace]

members = ["crates/vui", "crates/vterm", "crates/vshell"]
default-members = ["crates/vterm"]
resolver = "2"

[workspace.dependencies]
vui = { path = "crates/vui" }
vshell = { path = "crates/vshell" }
winit = "0.30.1"
anyhow = "1.0.44"
log = "0.4.13"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
nalgebra = "*"
memoffset = "*"
thiserror = "1.0.29"
image = "0.25.1"
ab_glyph = "*"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = false
lto = false
codegen-units = 16
incremental = true
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 16

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3

[workspace.lints.clippy]
dbg_macro = "deny"
#todo = "deny" # Very alpha stage codebase, so we're not ready for this yet.

single_range_in_vec_init = "allow"
style = "allow"

almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
let_underscore_future = "allow"
map_entry = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
type_complexity = "allow"
