[workspace]
members = ["crates/vui", "crates/vterm", "crates/vshell", "crates/vtty"]
default-members = ["crates/vterm"]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["nuii <contact@viable.gg>"]
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["graphics", "terminal"]
repository = "https://github.com/viablegg/vterm"
homepage = "https://viable.gg/vterm"
documentation = "https://github.com/viablegg/vterm#readme"

[workspace.dependencies]
vui = { path = "crates/vui" }
vshell = { path = "crates/vshell" }
vtty = { path = "crates/vtty" }
ab_glyph = "0.2.26"
winit = "0.30.1"
anyhow = "1.0.44"
log = "0.4.13"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
nalgebra = "*"
memoffset = "*"
thiserror = "1.0.29"
image = "0.25.1"
bitflags = "2.5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = false
lto = false
codegen-units = 16
incremental = true
rpath = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true