[package]
name = "vshell"
description = "backend for vterm / terminal emulation library."
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
log.workspace = true
vui.workspace = true
winit.workspace = true
bitflags = "1.3.2"
parking_lot = "0.12.3"
smallvec = "1.13.2"
