[package]
description = "A cross-platform, vulkan based terminal emulator"
edition = "2021"
name = "vterm"
version = "0.0.1"
publish = false
license = "GPL-3.0-or-later"
authors = ["nuiifra <contact@viable.gg>"]

[[bin]]
name = "vterm"
path = "src/main.rs"

[dependencies]
vui.workspace = true
vshell.workspace = true
anyhow.workspace = true
winit.workspace = true
log.workspace = true
ash.workspace = true
ash-window.workspace = true