[package]
name = "vui"
version = "0.0.1"
authors = ["nuii <contact@viable.gg>"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "vui"
path = "src/lib.rs"

[dependencies]
winit = "0.30.1"
cfg-if = "1.0.0"
anyhow = "1.0.44"
flexi_logger = "0.17.1"
log = "0.4.13"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
aquamarine = "*"
nalgebra = "*"
memoffset = "*"
thiserror = "1.0.29"
image = "0.25.1"
ab_glyph = "*"

[dev-dependencies]
colored = "2.0"

[dependencies.textwrap]
features = ["terminal_size"]
version = "0.16.1"
