[package]
name = "vui"
version = "0.0.1"
authors = ["nuii <contact@viable.gg>"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "vui"
path = "src/lib.rs"

[dependencies]
winit.workspace = true
ash.workspace = true
ash-window.workspace = true
nalgebra.workspace = true
memoffset.workspace = true
image.workspace = true
ab_glyph.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
