[package]
name = "vui"
description = "ui library for vterm."
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
name = "vui"
path = "src/lib.rs"

[dependencies]
winit.workspace = true
ash.workspace = true
ash-window.workspace = true
nalgebra.workspace = true
memoffset.workspace = true
image.workspace = true
ab_glyph.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
